# dream-recall-alex

./: .gitignore  Diff_hypno_and_records_EEG.txt  Q claude.txt  TODO_dream.txt  TODO_dream_updated.txt  TODO_dream_v3.txt  TODO_dream_v4.txt  a faire.txt  aggregate_roi_fig5.py  aggregate_roi_fig5.py.bak  aggregate_roi_fig5_arthur11.py  analyse_zscore.py  analyze_thresholds.py  apply_potato_filter.py  batch_classify_all.sh  batch_classify_efs.sh  batch_classify_matrix.sh  batch_classify_sub.sh  batch_classify_vector.sh  batch_classify_vector_norm.sh  batch_diag_sub.sh  batch_feat_extract_all.sh  batch_feat_sub.sh  batch_fig3_arthurfull.sh  batch_fig3_ffx_rfx_overlap.sh  batch_fig3_ttest_compare.sh  batch_logsub_1_extract.sh  batch_logsub_2_classify.sh  batch_multifeature_all.sh  batch_preprocess.sh  batch_preprocess_all.sh  batch_preprocess_ica_only.sh  batch_recompute_fig3.sh  batch_recompute_perms_epoch_fixed_matrix.sh  batch_recompute_perms_epoch_matrix.sh  batch_recompute_perms_epoch_vector.sh  batch_se_osc_1_extract.sh  batch_se_osc_2_classify.sh  batch_sub_1_extract.sh  batch_sub_2_classify.sh  (+161 more)
Bazar/: comp_pair_expert.py  comp_per_jbe.py  config.py  convert_all_subjects.sh  (+12 more)
Rendu/: README.md  classif_rendu.py  classify.py  classify_rendu.py  config.py  feat_extract_umap_fooof.py  feat_extract_umap_fooof_rendu.py  mat_eeg_to_bids.py  preprocess_subject.py  preprocess_subject_rendu.py  pyproject.toml  requirements.txt  slurm-46473811.out
Rendu/scripts/: replicate_arthur_ffx.py
Rendu/src/dream_recall_alex/: classify.py  config.py  feat_extract_umap_fooof.py  mat_eeg_to_bids.py  preprocess_subject.py  utils.py
(+218 files in other folders)
